Added HomeComponent, NavBar and Routing Paths

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<div class="nav">
+  <div class="nav-items selected" id="home" (click)="home()">Home</div>
+  <div class="nav-items" id="counter" (click)="counter()">Counter</div>
+  <div class="nav-items" id="posts" (click)="posts()">Posts</div>
+</div>
+
 <router-outlet></router-outlet>
